Rename rfd to 10 and add small fixes.

--- a/rfd/0010-api.md
+++ b/rfd/0010-api.md
@@ -1,27 +1,25 @@
 ---
-authors: Alexander Klizhentas (sasha@gravitational.com)
+authors: Alexander Klizhentas (sasha@gravitational.com), Brian Joerger (bjoerger@gravitational.com)
 state: discussion
 ---
 
-# RFD 8 - API and Client Libraries
+# RFD 10 - API and Client Libraries
 
 ## What
 
-Document and publish API OpenAPI spec and documentation.
-Unify Golang Client experience.
+- Document and publish API OpenAPI spec and documentation.
+- Unify Golang Client experience.
 
 ## Why
 
 There are several problems with Go client libraries:
 
 * Go library example pulls entire teleport dependency including `lib/auth` and `lib/services`.
-* There is no separate client library with guarantees of compatibility  with specific version of Teleport.
+* There is no separate client library with guarantees of compatibility with specific version of Teleport.
 See examples [here](https://github.com/kubernetes/client-go#compatibility-matrix).
 *  It's impossible to generate library in any other language other than Go due to unclear API surface.
-*  Some client logic is residing in [plugins](https://github.com/gravitational/teleport-plugins/blob/master/access/access.go),
-while other is in `lib/auth`.
-
-* Code in `lib/auth` uses some concepts  unfamiliar to Go users:
+*  Some client logic is residing in [plugins](https://github.com/gravitational/teleport-plugins/blob/master/access/access.go), while other is in `lib/auth`.
+* Code in `lib/auth` uses some concepts unfamiliar to Go users:
 
 ```go
 // connectClient establishes a gRPC connection to an auth server.
@@ -31,7 +29,7 @@ func connectClient() (*auth.Client, error) {
         return nil, fmt.Errorf("Failed to setup TLS config: %v", err)
     }
 
-    // must part addr list panics and is not necessary
+    // must prase addr list panics and is not necessary
     authServerAddr := utils.MustParseAddrList("127.0.0.1:3025")
     clientConfig := auth.ClientConfig{Addrs: authServerAddr, TLS: tlsConfig}
 
@@ -48,19 +46,19 @@ The access to the API surface is limited by role based access control.
 
 Avoid large refactors, instead use Go's type aliases to move things around while keeping things backwards compatible.
 
-```
-// Preserve full backwards compatibility while keeping
+```go
+// Preserve full backwards compatibility
 type services.Role = types.Role
 type auth.Service = proto.Service
 ```
 
-Use Swagger and OpenAPI to document our SDKs.
+Use Swagger and OpenAPI to document and create SDKs.
 
 #### Move protobuf types and services
 
 Point protobuf generators to generate types to another folder and use a system of submodules:
 
-```
+```bash
 $ ls github.com/gravitational/teleport/api
 # root folder with API specs and is a submodule
 api/
@@ -68,7 +66,7 @@ api/
   # https://github.com/kubernetes/kubernetes/tree/master/api/openapi-spec
   openapi/
     spec.json
-    # move generate services types here, while keeping the original proto files
+    # move generated services types here, while keeping the original proto files
     # in place in lib/services/services.proto
   types/
     types.pb.go
@@ -76,23 +74,21 @@ api/
   # generate auth service lib/auth/proto here
   client/
     authservice.pb.go
-    ```
+```
 
 #### Move client implementation to `api/client`
 
 Move relevant lib/client.*Client code to `api/client`.
-Track dependecies, make sure that new `api/client` module has no dependencies
+Track dependencies, make sure that new `api/client` module has no dependencies
 on the outside modules anywhere in `lib`.
 
-**Track depenencies**
+**Track dependencies**
 
 Track dependencies to be limited to:
   * `gravitational/roundrip`,  `gravitational/trace`
   * grpc google package and its dependencies
   * protobuf generated code
-  * Keep some auth service specific code using `utils.Addr` and other specific code
-  *out of the `api/client` and in 
-
+  * Keep some auth service specific code like `utils.Addr` out of the `api/client`
 
 **Go native user experience**
 
@@ -121,7 +117,7 @@ func main() {
 }
 ```
 
-```
+```bash
 $ go mod init
 $ go run main.go
 ```
@@ -134,7 +130,7 @@ Support multiple credential providers with chaining
 * client.PathCreds("path") loads mounted creds from path, detects reloads
 and updates the grpc transport
 
-Support convenince method that supports and understands `~/.tsh/profile`,
+Support convenience method that supports and understands `~/.tsh/profile`,
 so users can try testing using credentials they got from `tsh login`
 
 ```go
@@ -142,7 +138,6 @@ so users can try testing using credentials they got from `tsh login`
 cfg, err := client.LoadTSHConfig()
 // cfg.ContextDialer sets up dialer using tunnel dialer in tctl
 // TLS creds are loaded from key store, similar how tctl does it in 5.0
-
 client, err := client.New(cfg)
 ```
 
@@ -154,27 +149,27 @@ $ go run main.go
 
 **Auto version checks**
 
-Client should verify that it's implementation is compatible with
-teleport's server version by calling `Ping` anc checking the version
+Client should verify that its implementation is compatible with
+Teleport's server version by calling `Ping` and checking the version
 similar to tsh logic.
 
 ## Move Access requests code into client
 
-Move `access` workflows code into `client` subpackage:
+Move `access` workflows code into `client` subpackage with new name `workflows`:
 
 https://github.com/gravitational/teleport-plugins/tree/master/access
 
-Instead of a separate client becomes a subpackage using the only client:
+Instead of a separate client, `workflows` becomes a subpackage of the api client:
 
 ```go
 import (
    "github.com/gravitational/teleport/api/client"
-   "github.com/gravitational/teleport/api/client/access"
+   "github.com/gravitational/teleport/api/client/workflows"
 )
 
 func main() {
    client, err := client.New(...)
-   watcher, err := access.NewWatcher(ctx, client, access.Watch{State: ...})
+   watcher, err := workflows.NewWatcher(ctx, client, workflows.Watch{State: ...})
    ...
    defer watcher.Close()
 
@@ -229,7 +224,6 @@ client.tokens()
 ```
 
 Port router code
-
 
 ```python
 @access.handle(clt, path=access.trait("team")):
